# FastSAM_Awsome_Openvino

./: .gitignore  FastSAM.py  README.md  pt2onnx.py
models/: FastSAM-s.xml
src/CPlusPlus/: CMakeLists.txt  FastSAM.cpp  FastSAM.h  main.cpp  slog.cpp  slog.hpp
src/Python/: FastSAM.py  requirements.txt
